[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"

derive_more = "0.99.17"
env_logger = "0.8"
log = "0.4"

[dependencies.rusqlite]
version = "*"
features = ["bundled"]